# cookiecutter-aws-lambda-python-project

./: .gitignore  README.rst  cookiecutter.json  cookiecutterize.py  generate_example_project.py  readthedocs.yml  release-history.rst
aws_lambda_python_example-project/aws_lambda_python_example-project/: .coveragerc  .gitignore  codebuild-config.json  pyproject.toml  setup.py
aws_lambda_python_example-project/aws_lambda_python_example-project/aws_lambda_python_example/: __init__.py  boto_ses.py
aws_lambda_python_example-project/aws_lambda_python_example-project/aws_lambda_python_example/config/define/: main.py
aws_lambda_python_example-project/aws_lambda_python_example-project/aws_lambda_python_example/iac/: output.py
aws_lambda_python_example-project/aws_lambda_python_example-project/aws_lambda_python_example/tests/: boto_ses.py
aws_lambda_python_example-project/aws_lambda_python_example-project/config/: config.json
aws_lambda_python_example-project/aws_lambda_python_example-project/lambda_app/: update_chalice_config.py
aws_lambda_python_example-project/aws_lambda_python_example-project/tests/: test_import.py
aws_lambda_python_example-project/aws_lambda_python_example-project/tests/config/: test_config_init.py
aws_lambda_python_example-project/aws_lambda_python_example-project/tests/iac/: test_define.py
aws_lambda_python_example-project/aws_lambda_python_example-project/tests/lbd/: test_lbd_hello.py
aws_lambda_python_example-project/aws_lambda_python_example-project/tests_int/lbd/: test_lbd_hello.py  test_lbd_s3sync.py
docs/source/: conf.py  (+1 more)
(+69 files in other folders)
